CursorProject/force-app/main/default/objects/Account/Fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <label>Customer Tier</label>
    <type>Text</type>
    <length>50</length>
</CustomField>