CursorProject/force-app/main/default/objects/Account/Fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <label>Engagement Level</label>
    <type>Text</type>
    <length>50</length>
</CustomField>