CursorProject/force-app/main/default/objects/Account/Fields/Last_90_Day_Wins__c.field-meta.xml
<CustomField>
    <fullName>Last_90_Day_Wins__c</fullName>
    <label>Last 90 Day Wins</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>