CursorProject/force-app/main/default/objects/Account/Fields/Revenue_Tier__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Tier__c</fullName>
    <label>Revenue Tier</label>
    <type>Text</type>
    <formula>
        IF(AnnualRevenue >= 1000000, "Gold",
            IF(AnnualRevenue >= 250000, "Silver", "Bronze")
        )
    </formula>
</CustomField>